simple version update later

--- a/blank.html
+++ b/blank.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./script.js"></script>
+    
+    <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="buttons">
+    <button data-name="Rock" class="one">Rock</button>
+    <button data-name="Paper" class="two">Paper</button>
+    <button data-name="Scissiors">Scissiors</button>
+    </div>
+    <div class="result"></div>
+    <script src="./script.js"></script>
 </body>
 </html>
